--- a/style.css
+++ b/style.css
@@ -87,72 +87,68 @@ p {
   background-color: #2589bd;
 }
 
-.benefit-lead {
-  margin-bottom: 32px;
-  color: #ffffff;
-}
-
-.benefit-brand {
-  margin-bottom: 32px;
-  color: #ffffff;
-}
-
+.benefit-lead,
+.benefit-brand,
 .benefit-cost {
   margin-bottom: 32px;
   color: #ffffff;
 }
 
-.benefit-lead h3 {
-  margin-bottom: 10px;
-  text-align: center;
-}
+/* Combined these elements since they require the same settings */
 
-.benefit-brand h3 {
-  margin-bottom: 10px;
-  text-align: center;
-}
+/* .benefit-brand {
+  margin-bottom: 32px;
+  color: #ffffff;
+} */
 
+/* .benefit-cost {
+  margin-bottom: 32px;
+  color: #ffffff;
+} */
+
+.benefit-lead h3,
+.benefit-brand h3,
 .benefit-cost h3 {
   margin-bottom: 10px;
   text-align: center;
 }
 
-.benefit-lead img {
-  display: block;
-  margin: 10px auto;
-  max-width: 150px;
-}
+/* Combined these elements since they requrie the same settings */
 
-.benefit-brand img {
-  display: block;
-  margin: 10px auto;
-  max-width: 150px;
-}
+/* .benefit-brand h3 {
+  margin-bottom: 10px;
+  text-align: center;
+} */
 
+/* .benefit-cost h3 {
+  margin-bottom: 10px;
+  text-align: center;
+} */
+
+.benefit-lead img,
+.benefit-brand img,
 .benefit-cost img {
   display: block;
   margin: 10px auto;
   max-width: 150px;
 }
 
-.search-engine-optimization {
-  margin-bottom: 20px;
-  padding: 50px;
-  height: 300px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #0072bb;
-  color: #ffffff;
-}
+/* Combined these elements since they require the same settings */
 
-.online-reputation-management {
-  margin-bottom: 20px;
-  padding: 50px;
-  height: 300px;
-  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
-  background-color: #0072bb;
-  color: #ffffff;
-}
+/* .benefit-brand img {
+  display: block;
+  margin: 10px auto;
+  max-width: 150px;
+} */
 
+/* .benefit-cost img {
+  display: block;
+  margin: 10px auto;
+  max-width: 150px;
+} */
+
+.search-engine-optimization,
+.online-reputation-management,
 .social-media-marketing {
   margin-bottom: 20px;
   padding: 50px;
@@ -162,32 +158,60 @@ p {
   color: #ffffff;
 }
 
-.search-engine-optimization img {
-  max-height: 200px;
-}
+/* Combined all these elements since they require same settings */
 
-.online-reputation-management img {
-  max-height: 200px;
-}
+/* .online-reputation-management {
+  margin-bottom: 20px;
+  padding: 50px;
+  height: 300px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  background-color: #0072bb;
+  color: #ffffff;
+} */
 
+/* .social-media-marketing {
+  margin-bottom: 20px;
+  padding: 50px;
+  height: 300px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
+  background-color: #0072bb;
+  color: #ffffff;
+} */
+
+.search-engine-optimization img,
+.online-reputation-management img,
 .social-media-marketing img {
   max-height: 200px;
 }
+/* 
+Combined all these elements since they are requiring max-height of 200px */
 
-.search-engine-optimization h2 {
-  margin-bottom: 20px;
-  font-size: 36px;
-}
+/* .online-reputation-management img {
+  max-height: 200px;
+} */
 
-.online-reputation-management h2 {
-  margin-bottom: 20px;
-  font-size: 36px;
-}
+/* .social-media-marketing img {
+  max-height: 200px;
+} */
 
+.search-engine-optimization h2,
+.online-reputation-management h2,
 .social-media-marketing h2 {
   margin-bottom: 20px;
   font-size: 36px;
 }
+
+/* Combined all these elements since they require same margin-bottom and font-size */
+
+/* .online-reputation-management h2 {
+  margin-bottom: 20px;
+  font-size: 36px;
+} */
+
+/* .social-media-marketing h2 {
+  margin-bottom: 20px;
+  font-size: 36px;
+} */
 
 .footer {
   padding: 30px;
